<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/shape_dialog">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/highPressure"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/high_pressure"
        app:hintTextAppearance="@style/DialogHintFont"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/highPressureField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DialogEditorFont"
            android:inputType="numberDecimal"
            tools:text="160"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lowPressure"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/low_pressure"
        app:hintTextAppearance="@style/DialogHintFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/highPressure"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lowPressureField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DialogEditorFont"
            android:inputType="numberDecimal"
            tools:text="80"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pulse"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pulse"
        app:hintTextAppearance="@style/DialogHintFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/lowPressure"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pulseField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DialogEditorFont"
            android:inputType="numberDecimal"
            tools:text="90"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:textAppearance="@style/DialogButtonFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/pulse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:textAppearance="@style/DialogButtonFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/pulse"
        app:layout_constraintStart_toEndOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>